unpackaged/main/default/objects/Account_Service_Product__c/Account_Service_Product__c.object-meta.xml
<CustomObject>
    <label>Account Service Product</label>
    <nameField>
        <displayFormat>a-{00000000}</displayFormat>
        <label>Account Service Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Service Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>