unpackaged/main/default/objects/Account_Service_Product__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Service Products</relationshipLabel>
    <relationshipName>Account_Service_Products</relationshipName>
    <type>Lookup</type>
</CustomField>