unpackaged/main/default/objects/Account_Service_Product__c/fields/Service_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Product__c</fullName>
    <formula>Service_Product_LU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Product</label>
    <type>Text</type>
</CustomField>