unpackaged/main/default/objects/Account_Service_Product__c/fields/Service_Product_LU__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Product</label>
    <referenceTo>Service_Product__c</referenceTo>
    <relationshipLabel>Account Service Products</relationshipLabel>
    <relationshipName>Account_Service_Products</relationshipName>
    <type>Lookup</type>
</CustomField>