unpackaged/main/default/objects/Account_Service_Product__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <formula>Service_Product_LU__r.Skill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill</label>
    <type>Text</type>
</CustomField>