unpackaged/main/default/objects/Account_Service_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Service_Product_LU__c</columns>
    <columns>Service_Product__c</columns>
    <columns>Skill__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>